syntax = "proto3";

package usersManagement;

service UsersManagementService {
    rpc Create (ICreateUserDto) returns (ICreateUserResponse) {}
}

message ICreateUserDto {
    string username = 1;

    string email = 2;

    string password = 3;

    string role = 4;

    string organizationId = 5;
}

message ICreateUserResponse {
    string id = 1;

    string username = 2;

    string email = 3;

    string password = 4;

    string role = 5;

    string organizationId = 6;

    string createdAt = 7;
}

